# SmartFitnessAssistant

./: .env.example  .gitignore  main.py  project.config.json  project.private.config.json  pyproject.toml  test_image.py
app/: api.py  langchain.py
app/core/: config.py
app/readme/: 微信小程序前端开发文档.md  智能健身食谱与卡路里总结Agent_开发文档.md
miniprogram/: app.js  app.json  app.wxss  project.config.json  project.private.config.json  sitemap.json
miniprogram/assets/icons/: README.md
miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
miniprogram/pages/profile/: profile.js  profile.wxml  profile.wxss
miniprogram/pages/recommend/: recommend.js  recommend.json  recommend.wxml  recommend.wxss
miniprogram/pages/report/: report.js  report.json  report.wxml  report.wxss
miniprogram/utils/: api.js
